--- a/orc8r/cloud/go/obsidian/swagger/v1/index.html
+++ b/orc8r/cloud/go/obsidian/swagger/v1/index.html
@@ -7,9 +7,9 @@
   <meta charset="UTF-8">
   <title>Magma API Docs</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../swagger-ui/dist/swagger-ui.css" >
-  <link rel="icon" type="image/png" href="../swagger-ui/dist/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="../swagger-ui/dist/favicon-16x16.png" sizes="16x16" />
+  <link rel="stylesheet" type="text/css" href="../../static/swagger-ui/dist/swagger-ui.css" >
+  <link rel="icon" type="image/png" href="../../static/swagger-ui/dist/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="../../static/swagger-ui/dist/favicon-16x16.png" sizes="16x16" />
   <style>
     html
     {
@@ -70,14 +70,14 @@
 
 <div id="swagger-ui"></div>
 
-<script src="../swagger-ui/dist/swagger-ui-bundle.js"> </script>
-<script src="../swagger-ui/dist/swagger-ui-standalone-preset.js"> </script>
+<script src="../../static/swagger-ui/dist/swagger-ui-bundle.js"> </script>
+<script src="../../static/swagger-ui/dist/swagger-ui-standalone-preset.js"> </script>
 <script>
 window.onload = function() {
 
-  // Build a system
-  const ui = SwaggerUIBundle({
-    url: window.location.origin + '/apidocs/v1/swagger.yml',
+    // Build a system
+    const ui = SwaggerUIBundle({
+    url: window.location.origin + '{{.URL}}',
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
@@ -96,4 +96,3 @@ window.onload = function() {
 </body>
 
 </html>
-
