Add simple collapse button
Signed-off-by: Andy Lee Khuu <andykhuu@stanford.edu>

--- a/orc8r/cloud/go/obsidian/swagger/v1/index.html
+++ b/orc8r/cloud/go/obsidian/swagger/v1/index.html
@@ -36,6 +36,9 @@
 
 <!-- Sidebar navigation -->
 <div class="sidenav">
+  <!-- Collapse Button -->
+  <button onclick="window.location=window.location + '?docExpansion=none' "> Collapse Tags </button>
+
   <a id = "home" {{if eq .SelectedService "" }}class="selected"{{end}} href="./"> Home </a>
 
   {{ range $idx, $val := .Services}}
