--- a/orc8r/cloud/go/obsidian/swagger/v1/index.html
+++ b/orc8r/cloud/go/obsidian/swagger/v1/index.html
@@ -30,20 +30,21 @@
       background: #fafafa;
     }
   </style>
+  <script src="https://kit.fontawesome.com/85d0a9f517.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
 <!-- Sidebar navigation -->
 <div class="sidenav">
-  <!-- Collapse Button -->
-  <button onclick="window.location=window.location + '?docExpansion=none' "> Collapse Tags </button>
-
   <a id = "home" {{if eq .SelectedService "" }}class="selected"{{end}} href="./"> Home </a>
 
   {{ range $idx, $val := .Services}}
   <a href="{{$val}}" {{if eq $.SelectedService $val}}class="selected"{{end}}> {{ $val }} </a>
   {{ end }}
+
+  <!-- Collapse Button -->
+  <button class="fas fa-compress-alt" style="cursor: pointer; font-size: x-large; margin-left: 10px;" onclick="window.location=window.location + '?docExpansion=none' "></button>
 </div>
 
 <svg xmlns="http://www.w3.org/2000/svg"
